<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_user_weekly_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_weekly_progress"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_700"
        android:textStyle="bold"
        android:textSize="25sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_total_progress"
        android:background="@drawable/round_corner_dialog"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_view_user_weekly_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_total_progress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_progress"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar_total_progress"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp" />

        <ProgressBar
            android:id="@+id/progress_bar_total_progress"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:progressDrawable="@drawable/circular_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:indeterminate="false"
            android:background="@drawable/circle_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/layout_progress"
            android:layout_marginEnd="15dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classes_percent"
            android:textColor="@color/green_500"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="@id/progress_bar_total_progress"
            app:layout_constraintStart_toStartOf="@id/progress_bar_total_progress"
            app:layout_constraintEnd_toEndOf="@id/progress_bar_total_progress"
            app:layout_constraintBottom_toBottomOf="@id/progress_bar_total_progress"
            android:textStyle="bold"/>

        <include
            android:id="@+id/layout_progress"
            layout="@layout/item_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_view_total_progress"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar_total_progress"
            tools:listitem="@layout/item_progress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_correct_answers"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_rectangle"
        app:layout_constraintTop_toBottomOf="@id/layout_total_progress"
        android:backgroundTint="@color/gray">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correct_answers"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar_correct_answers"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:progressDrawable="@drawable/circular_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="100"
                android:indeterminate="false"
                android:background="@drawable/circle_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="15dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classes_percent"
                android:textColor="@color/green_500"
                android:textSize="15sp"
                app:layout_constraintTop_toTopOf="@id/progress_bar_correct_answers"
                app:layout_constraintStart_toStartOf="@id/progress_bar_correct_answers"
                app:layout_constraintEnd_toEndOf="@id/progress_bar_correct_answers"
                app:layout_constraintBottom_toBottomOf="@id/progress_bar_correct_answers"
                android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_memorizing_rate"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/shape_rounded_rectangle"
            app:layout_constraintTop_toBottomOf="@id/layout_correct_answers"
            android:backgroundTint="@color/gray">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memorizing_rate"
                    android:textAllCaps="true"
                    android:textSize="17sp"
                    android:layout_marginStart="30dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progress_bar_memorizing_rate"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:indeterminate="false"
                    android:background="@drawable/circle_shape"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="15dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classes_percent"
                    android:textColor="@color/green_500"
                    android:textSize="15sp"
                    app:layout_constraintTop_toTopOf="@id/progress_bar_memorizing_rate"
                    app:layout_constraintStart_toStartOf="@id/progress_bar_memorizing_rate"
                    app:layout_constraintEnd_toEndOf="@id/progress_bar_memorizing_rate"
                    app:layout_constraintBottom_toBottomOf="@id/progress_bar_memorizing_rate"
                    android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>